@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                         June 14, 2002 - March 3, 2004
+                         June 14, 2002 - March 4, 2004
 
      ----------------------------------------------------------------------
 
@@ -420,6 +420,8 @@ Options
                      |--------------------+------------------+---------|
                      |russian             |                  |         |
                      |--------------------+------------------+---------|
+                     |serbian             |                  |         |
+                     |--------------------+------------------+---------|
                      |spanish             |espanol           |         |
                      |--------------------+------------------+---------|
                      |slovak              |                  |         |
@@ -570,7 +572,7 @@ Options
            |---------------+-------------------+--------------------|
            |C              |                   |English             |
            |---------------+-------------------+--------------------|
-           |af_ZA          |Afrikaans          |                    |
+           |af_ZA          |                   |Afrikaans           |
            |---------------+-------------------+--------------------|
            |ca_ES          |Catalan            |Catal`a             |
            |---------------+-------------------+--------------------|
@@ -626,9 +628,11 @@ Options
            |---------------+-------------------+--------------------|
            |ru_RU          |                   |Russian             |
            |---------------+-------------------+--------------------|
-           |sk_SK          |Slovak             |                    |
+           |sk_SK          |                   |Slovak              |
            |---------------+-------------------+--------------------|
            |sv_SE@euro     |Svenska            |Swedish             |
+           |---------------+-------------------+--------------------|
+           |sr_YU          |                   |Serbian             |
            |---------------+-------------------+--------------------|
            |ta_IN (*)      |                   |Tamil               |
            |---------------+-------------------+--------------------|
