@@ -23,7 +23,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>June 14, 2002 - March 3, 2004</p>
+<p>June 14, 2002 - March 4, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -609,6 +609,11 @@ New Breed Software</p>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
+	    <td><code>serbian</code></td>
+	    <td>&nbsp;</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><code>spanish</code></td>
 	    <td><code>espanol</code></td>
 	    <td>&nbsp;</td>
@@ -833,8 +838,8 @@ New Breed Software</p>
       </tr>
       <tr>
         <td><code>af_ZA</code></td>
-	<td>Afrikaans</td>
 	<td>&nbsp;</td>
+	<td>Afrikaans</td>
       </tr>
       <tr>
         <td><code>ca_ES</code></td>
@@ -973,13 +978,18 @@ New Breed Software</p>
       </tr>
       <tr>
         <td><code>sk_SK</code></td>
-	<td>Slovak</td>
 	<td>&nbsp;</td>
+	<td>Slovak</td>
       </tr>
       <tr>
         <td><code>sv_SE@euro</code></td>
 	<td>Svenska</td>
 	<td>Swedish</td>
+      </tr>
+      <tr>
+        <td><code>sr_YU</code></td>
+	<td>&nbsp;</td>
+	<td>Serbian</td>
       </tr>
       <tr>
         <td><code>ta_IN</code> (*)</td>
