@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.03.03
-.TH TUXPAINT 1 "03 Mar 2004" "0.9.14" "Tux Paint"
+.\" tuxpaint.1 - 2004.03.04
+.TH TUXPAINT 1 "04 Mar 2004" "0.9.14" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -450,6 +450,7 @@ Pjetur G. Hjaltason,
 Karl Ove Hufthammer,
 Juan Irigoien,
 Dmitriy Ivanov,
+Aleksandar Jelenak,
 Rasmus Erik Voel Jensen,
 Wang Jian,
 Petri Jooste,
