@@ -7,9 +7,12 @@ bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-2004.Mar.03 (0.9.14) [cvs]
+2004.Mar.04 (0.9.14) [cvs]
   * Afrikaans translation created.
     Petri Jooste <rkwjpj@puk.ac.za>
+
+  * Serbian translation created.
+    Aleksandar Jelenak <jelenak@netlinkplus.net>
 
   * Korean language file (ko.po) update.
     Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>
